--- a/app/src/main/res/layout/category_bar.xml
+++ b/app/src/main/res/layout/category_bar.xml
@@ -19,8 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="4dp"
             android:text=""
+            android:fontFamily="@font/scdream5"
+            android:textStyle="bold"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/nfc"
             app:layout_constraintHorizontal_bias="0.0"
