--- a/app/src/main/res/layout/memo.xml
+++ b/app/src/main/res/layout/memo.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/highlight"
+    android:background="?attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="3dp">
@@ -20,8 +20,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ㆍ"
+            android:fontFamily="@font/scdream3"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textSize="17sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -30,8 +32,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text=""
+            android:fontFamily="@font/scdream3"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textSize="17sp"
             android:ellipsize="end"
             android:maxLines="1"
             app:layout_constraintHorizontal_bias="0.0"
@@ -44,8 +48,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:fontFamily="@font/scdream3"
             android:textColor="#000000"
-            android:textSize="20sp"
+            android:textSize="17sp"
+            android:textStyle="bold"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@id/Memo_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -57,7 +63,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:fontFamily="@font/scdream3"
             android:textColor="#000000"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/Memo_content"
             app:layout_constraintLeft_toRightOf="@id/dot"
             app:layout_constraintRight_toLeftOf="@id/Memo_category" />
@@ -67,7 +75,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:fontFamily="@font/scdream3"
             android:textColor="#000000"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/Memo_content"
             app:layout_constraintLeft_toRightOf="@id/Memo_date"
             app:layout_constraintRight_toLeftOf="@id/Memo_id" />
@@ -77,6 +87,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
+            android:fontFamily="@font/scdream3"
+            android:textStyle="bold"
             android:visibility="invisible"
             app:layout_constraintTop_toBottomOf="@id/Memo_content"
             app:layout_constraintLeft_toRightOf="@id/Memo_category"/>
