--- a/app/src/main/res/drawable/toggle.xml
+++ b/app/src/main/res/drawable/toggle.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:drawable="@drawable/symbol4" />
-    <item android:drawable="@drawable/symbol3" />
+        android:drawable="@drawable/arrow_up" />
+    <item android:drawable="@drawable/arrow_down" />
 </selector>
