--- a/app/src/main/res/layout/category_bar.xml
+++ b/app/src/main/res/layout/category_bar.xml
@@ -52,10 +52,12 @@
 
         <ToggleButton
             android:id="@+id/fold"
-            android:layout_width="wrap_content"
+            android:layout_width="25dp"
             android:layout_height="0dp"
             android:layout_marginEnd="4dp"
             android:background="@drawable/toggle"
+            android:textOn=""
+            android:textOff=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/editCategoryName"
