데이터베이스의 카테고리 테이블에서 nfc 필드 삭제 더이상 nfc 고유 아이디를 저장하지 않음
데이터베이스 memo 테이블의 유니크 조건을 변경
날짜, 시간, 내용까지 완벽하게 동일한 경우에 데이터베이스 저장을 하지 못하게 함

메인 화면에서 입력된 메모의 날짜 시간이 지나가면 그 메모가 출력되지 않도록 함

카테고리별 메모 화면에서 지나간 메모를 확인할 수 있도록 함

카테고리별 메모 화면에서도 NFC 등록이나 메모 작성이 가능하게 하기 위한 세팅 중
카테고리별 메모 화면에서 지나간 메모의 접기/펼치기 기능을 넣기위해 탐색 중

--- a/app/src/main/res/layout/activity_category_memo.xml
+++ b/app/src/main/res/layout/activity_category_memo.xml
@@ -19,19 +19,76 @@
             android:id="@+id/toolbar_category_memo_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:textColor="#000000"
             android:text="카테고리명"
-            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:fontFamily="@font/scdream5"
             android:textSize="20sp" />
     </android.support.v7.widget.Toolbar>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_category_memo"
+        android:id="@+id/recycler_view_next_memo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:overScrollMode="never"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_category_memo"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@+id/previous_memo_container"
+        tools:layout_editor_absoluteX="0dp" >
+    </android.support.v7.widget.RecyclerView>
+
+    <!-- height가 60이면 화면의 85퍼, 270이면 55퍼 정도 -->
+    <android.support.constraint.ConstraintLayout
+        android:id = "@+id/previous_memo_container"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintTop_toBottomOf="@id/recycler_view_next_memo"
+        app:layout_constraintBottom_toTopOf="@id/menu_container_category">
+
+        <TextView
+            android:id="@+id/previous_memo_button"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="지나간 메모"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/recycler_view_previous_memo" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_previous_memo"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:overScrollMode="never"
+            app:layout_constraintTop_toBottomOf="@+id/previous_memo_button"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id = "@+id/menu_container_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/previous_memo_container"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/regist_nfc_category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="nfc 등록"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/add_memo_category"/>
+
+        <Button
+            android:id="@+id/add_memo_category"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="메모 추가"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/regist_nfc_category"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
