--- a/app/src/main/res/layout/category_bar.xml
+++ b/app/src/main/res/layout/category_bar.xml
@@ -24,31 +24,10 @@
             android:textColor="#000000"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/nfc"
+            app:layout_constraintEnd_toStartOf="@+id/fold"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <ToggleButton
-            android:id="@+id/nfc"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:background="@drawable/toggle"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/editCategoryName"
-            app:layout_constraintStart_toEndOf="@id/category_name"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageButton
-            android:id="@+id/editCategoryName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fold"
-            app:layout_constraintStart_toEndOf="@id/nfc"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/symbol2" />
 
         <ToggleButton
             android:id="@+id/fold"
@@ -60,7 +39,7 @@
             android:textOff=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/editCategoryName"
+            app:layout_constraintStart_toEndOf="@id/category_name"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
