--- a/app/src/main/res/layout/activity_category_select.xml
+++ b/app/src/main/res/layout/activity_category_select.xml
@@ -3,19 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_height="500dp"
     android:background="@drawable/calendar_memo_round"
     android:orientation="vertical"
     tools:context=".CategorySelectActivity">
+
+
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/navigationView"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/category_list">
+
+        <TextView
+            android:id="@+id/navigationText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용하실 카테고리를 선택해주세요"
+            android:textSize="18sp"
+            android:fontFamily="@font/scdream5"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/category_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:overScrollMode="never"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/add_category_name">
-    </android.support.v7.widget.RecyclerView>
+        app:layout_constraintBottom_toTopOf="@+id/add_category_name"
+        app:layout_constraintTop_toBottomOf="@id/navigationView"></android.support.v7.widget.RecyclerView>
 
     <EditText
         android:id="@+id/add_category_name"
@@ -24,6 +47,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="추가할 카테고리 이름"
+        android:fontFamily="@font/scdream3"
         app:layout_constraintTop_toBottomOf="@id/category_list"
         app:layout_constraintBottom_toTopOf="@id/checkBar"
         app:layout_constraintStart_toStartOf="parent"
