--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,9 +22,11 @@
             android:layout_height="35dp"
             android:background="@drawable/searchbar_round"
             android:ems="15"
+            android:fontFamily="@font/scdream3"
             android:hint="메모를 입력해주세요"
             android:inputType="text"
             android:paddingLeft="10dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/imageButton"
